Use system brush font when available, ensure ruby text aligned center

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,7 @@ body {
     text-wrap: balance;
   }
 }
+
+rt {
+  text-align: center;
+}
